--- a/test.html
+++ b/test.html
@@ -1124,7 +1124,7 @@
       });
     function GenerateBarStrucure(RawData) {
       let len = classDatas.length;
-      for (let i = 0; i < len; i++) {
+      for (let i = 0; i < 50; i++) {
         let newBar = document.createElement("div");
         newBar.className = "bar";
         // newBar.innerHTML =
