--- a/test.html
+++ b/test.html
@@ -828,7 +828,7 @@
     <a href="#" class="totop">
       <i class="fas fa-chevron-circle-up"></i>
     </a>
-    <div class="searchgroup">
+    <!-- <div class="searchgroup">
       <section class="intro">
         <div class="container-fluid">
           <div class="row">
@@ -1047,7 +1047,7 @@
           <canvas id="myChart1"></canvas>
         </div>
       </div> -->
-    </div>
+    </div> -->
     <div id="overlay"></div>
 
     <div class="noticegroup">
