--- a/test.html
+++ b/test.html
@@ -828,72 +828,72 @@
     <a href="#" class="totop">
       <i class="fas fa-chevron-circle-up"></i>
     </a>
-    <!-- <div class="searchgroup">
-      <section class="intro">
-        <div class="container-fluid">
-          <div class="row">
-            <div id="NameContainer">
-              <svg id="NameSvg" viewbox="0 0 100 50">
-                <text
-                  class="name-tag"
-                  fill="#000"
-                  stroke="#000"
-                  text-anchor="middle"
-                  x="28%"
-                  y="50%"
-                  dy=".35em"
-                >
-                  X'
-                </text>
-                <text
-                  class="name-tag"
-                  fill="#d1c71a"
-                  stroke="#d1c71a"
-                  text-anchor="middle"
-                  x="45%"
-                  y="50%"
-                  dy=".35em"
-                >
-                  M
-                </text>
-                <text
-                  class="name-tag"
-                  fill="#de3812"
-                  stroke="#de3812"
-                  text-anchor="middle"
-                  x="57%"
-                  y="50%"
-                  dy=".35em"
-                >
-                  a
-                </text>
-                <text
-                  class="name-tag"
-                  fill="#fcc623"
-                  stroke="#fcc623"
-                  text-anchor="middle"
-                  x="67%"
-                  y="50%"
-                  dy=".35em"
-                >
-                  d
-                </text>
-                <text
-                  class="name-tag"
-                  fill="#68440a"
-                  stroke="#68440a"
-                  text-anchor="middle"
-                  x="77%"
-                  y="50%"
-                  dy=".35em"
-                >
-                  s
-                </text>
-              </svg>
+    <div class="searchgroup">
+      <!-- <section class="intro">
+          <div class="container-fluid">
+            <div class="row">
+              <div id="NameContainer">
+                <svg id="NameSvg" viewbox="0 0 100 50">
+                  <text
+                    class="name-tag"
+                    fill="#000"
+                    stroke="#000"
+                    text-anchor="middle"
+                    x="28%"
+                    y="50%"
+                    dy=".35em"
+                  >
+                    X'
+                  </text>
+                  <text
+                    class="name-tag"
+                    fill="#d1c71a"
+                    stroke="#d1c71a"
+                    text-anchor="middle"
+                    x="45%"
+                    y="50%"
+                    dy=".35em"
+                  >
+                    M
+                  </text>
+                  <text
+                    class="name-tag"
+                    fill="#de3812"
+                    stroke="#de3812"
+                    text-anchor="middle"
+                    x="57%"
+                    y="50%"
+                    dy=".35em"
+                  >
+                    a
+                  </text>
+                  <text
+                    class="name-tag"
+                    fill="#fcc623"
+                    stroke="#fcc623"
+                    text-anchor="middle"
+                    x="67%"
+                    y="50%"
+                    dy=".35em"
+                  >
+                    d
+                  </text>
+                  <text
+                    class="name-tag"
+                    fill="#68440a"
+                    stroke="#68440a"
+                    text-anchor="middle"
+                    x="77%"
+                    y="50%"
+                    dy=".35em"
+                  >
+                    s
+                  </text>
+                </svg>
+              </div>
             </div>
           </div>
-        </div>
-      </section>
+        </section> -->
       <div class="cover">
         <input
           type="text"
@@ -1047,7 +1047,7 @@
           <canvas id="myChart1"></canvas>
         </div>
       </div> -->
-    </div> -->
+    </div>
     <div id="overlay"></div>
 
     <div class="noticegroup">
