--- a/test.html
+++ b/test.html
@@ -613,7 +613,7 @@
         box-shadow: none;
         /* border: #000 1px solid; */
       }
-      .choose-class {
+      /* .choose-class {
         position: fixed;
         bottom: 40px;
         left: 5%;
@@ -647,7 +647,7 @@
         color: white;
         text-align: center;
         border-radius: 24px;
-      }
+      } */
       .choose-class.shake {
         animation: shakeCart 0.4s ease-in-out forwards;
       }
