--- a/test.html
+++ b/test.html
@@ -1170,8 +1170,8 @@
         });
       });
       console.log(classDatas);
-      addStarbuttonInteractive();
-      check_classList();
+      // addStarbuttonInteractive();
+      // check_classList();
     }
     function checkSetInteraction(index) {
       for (const setValue of classDatas[index]["divide"]) {
