--- a/test.html
+++ b/test.html
@@ -1127,7 +1127,7 @@
     function GenerateBarStrucure(RawData) {
       console.log("fine");
       let len = classDatas.length;
-      for (let i = 0; i < 10; i++) {
+      for (let i = 0; i < len; i++) {
         let newBar = document.createElement("div");
         newBar.className = "bar";
         // newBar.innerHTML =
