--- a/test.html
+++ b/test.html
@@ -1224,7 +1224,7 @@
         }
         taggroup[i].innerHTML = tagscontant;
         const words = classDatas[i]["value"].split(",");
-        DrawLadarGraph(labels, words, i);
+        // DrawLadarGraph(labels, words, i);
       }
     }
     function setClassIndex(index) {
