--- a/paging.html
+++ b/paging.html
@@ -835,71 +835,71 @@
       <i class="fas fa-chevron-circle-up"></i>
     </a>
     <div class="searchgroup">
-      <!-- <section class="intro">
-          <div class="container-fluid">
-            <div class="row">
-              <div id="NameContainer">
-                <svg id="NameSvg" viewbox="0 0 100 50">
-                  <text
-                    class="name-tag"
-                    fill="#000"
-                    stroke="#000"
-                    text-anchor="middle"
-                    x="28%"
-                    y="50%"
-                    dy=".35em"
-                  >
-                    X'
-                  </text>
-                  <text
-                    class="name-tag"
-                    fill="#d1c71a"
-                    stroke="#d1c71a"
-                    text-anchor="middle"
-                    x="45%"
-                    y="50%"
-                    dy=".35em"
-                  >
-                    M
-                  </text>
-                  <text
-                    class="name-tag"
-                    fill="#de3812"
-                    stroke="#de3812"
-                    text-anchor="middle"
-                    x="57%"
-                    y="50%"
-                    dy=".35em"
-                  >
-                    a
-                  </text>
-                  <text
-                    class="name-tag"
-                    fill="#fcc623"
-                    stroke="#fcc623"
-                    text-anchor="middle"
-                    x="67%"
-                    y="50%"
-                    dy=".35em"
-                  >
-                    d
-                  </text>
-                  <text
-                    class="name-tag"
-                    fill="#68440a"
-                    stroke="#68440a"
-                    text-anchor="middle"
-                    x="77%"
-                    y="50%"
-                    dy=".35em"
-                  >
-                    s
-                  </text>
-                </svg>
-              </div>
+      <section class="intro">
+        <div class="container-fluid">
+          <div class="row">
+            <div id="NameContainer">
+              <svg id="NameSvg" viewbox="0 0 100 50">
+                <text
+                  class="name-tag"
+                  fill="#000"
+                  stroke="#000"
+                  text-anchor="middle"
+                  x="28%"
+                  y="50%"
+                  dy=".35em"
+                >
+                  X'
+                </text>
+                <text
+                  class="name-tag"
+                  fill="#d1c71a"
+                  stroke="#d1c71a"
+                  text-anchor="middle"
+                  x="45%"
+                  y="50%"
+                  dy=".35em"
+                >
+                  M
+                </text>
+                <text
+                  class="name-tag"
+                  fill="#de3812"
+                  stroke="#de3812"
+                  text-anchor="middle"
+                  x="57%"
+                  y="50%"
+                  dy=".35em"
+                >
+                  a
+                </text>
+                <text
+                  class="name-tag"
+                  fill="#fcc623"
+                  stroke="#fcc623"
+                  text-anchor="middle"
+                  x="67%"
+                  y="50%"
+                  dy=".35em"
+                >
+                  d
+                </text>
+                <text
+                  class="name-tag"
+                  fill="#68440a"
+                  stroke="#68440a"
+                  text-anchor="middle"
+                  x="77%"
+                  y="50%"
+                  dy=".35em"
+                >
+                  s
+                </text>
+              </svg>
             </div>
           </div>
-        </section> -->
+        </div>
+      </section>
       <div class="cover">
         <input
           type="text"
