--- a/paging.html
+++ b/paging.html
@@ -681,7 +681,7 @@
         /* width: 100%; */
         height: 200px;
         z-index: 10;
-        background: url("/empty.svg");
+        background: url("./empty.svg");
         background-size: cover;
         opacity: 0.4;
         transform: scale(0.6);
