--- a/paging.html
+++ b/paging.html
@@ -760,6 +760,7 @@
         width: 100%;
       }
       .btn-info:active {
+        background-color: rgba(255, 255, 255, 0.797);
         top: 2px;
       }
       /* @keyframes yAxis {
@@ -992,7 +993,7 @@
         ></label>
         <div class="section-dropdown">
           <label class="for-dropdown-sub" for="dropdown-sub1"
-            >實用性 <i class="fas fa-dollar-sign"></i
+            >創意度 <i class="fas fa-lightbulb"></i
           ></label>
           <input
             class="dropdown-sub"
@@ -1009,7 +1010,7 @@
             ></a>
           </div>
           <label class="for-dropdown-sub" for="dropdown-sub2"
-            >跨域力<i class="fas fa-project-diagram"></i
+            >上手度<i class="fas fa-hourglass-start"></i
           ></label>
           <input
             class="dropdown-sub"
@@ -1026,7 +1027,7 @@
             ></a>
           </div>
           <label class="for-dropdown-sub" for="dropdown-sub3"
-            >難易度 <i class="fas fa-award"></i
+            >實作度 <i class="fas fa-hammer"></i
           ></label>
           <input
             class="dropdown-sub"
@@ -1043,7 +1044,7 @@
             ></a>
           </div>
           <label class="for-dropdown-sub" for="dropdown-sub4"
-            >實作度 <i class="fas fa-hammer"></i
+            >團隊力 <i class="fas fa-users"></i
           ></label>
           <input
             class="dropdown-sub"
@@ -1060,7 +1061,7 @@
             ></a>
           </div>
           <label class="for-dropdown-sub" for="dropdown-sub5"
-            >理論度 <i class="fas fa-book"></i
+            >先修度 <i class="fas fa-comments"></i
           ></label>
           <input
             class="dropdown-sub"
@@ -1159,18 +1160,18 @@
         <h2>評分標準</h2>
         <hr />
         <p>
-          <i class="fas fa-exclamation"></i><b>創意度</b>
+          <i class="fas fa-lightbulb"></i><b>創意度</b>
           越高表示這門課需要越多自由發想，越低則表示依照規定或者教學進行工作。
           <br />
-          <i class="fas fa-exclamation"></i><b>上手度</b>
+          <i class="fas fa-hourglass-start"></i><b>上手度</b>
           這門課必需要投入學習以及製作作品各項時間的總和，越高希望同學空下來給課堂學習的時間越多
           <br />
-          <i class="fas fa-check"></i
+          <i class="fas fa-hammer"></i
           ><b>實作度</b> 實作度越高越看重實作，越低越重視理論。 <br />
-          <i class="fas fa-check"></i
+          <i class="fas fa-users"></i
           ><b>團隊力</b>
           是否要求團隊的合作越低越偏向個人導向的課程，越高越偏向團體的課程<br />
-          <i class="fas fa-check"></i><b>先修度</b>
+          <i class="fas fa-comments"></i><b>先修度</b>
           是否適合初進入跨領域的人進行先修，越高的需要先備的學習課程也會越多
         </p>
         <button data-close-button class="close-btn">
@@ -1207,7 +1208,7 @@
     </div>
   </body>
   <script>
-    const labels = ["實用性", "跨域力", "難易度", "實作度", "理論度"];
+    const labels = ["創意度", "上手度", "實作度", "團隊力", "先修度"];
     const classList = JSON.parse(localStorage.getItem("classList")) || [];
     // const classList = [];
     let current_data = [];
