--- a/paging.html
+++ b/paging.html
@@ -575,6 +575,7 @@
       }
       .check .fas:after {
         position: absolute;
+        z-index: 1;
         display: inline-block;
         font-style: normal;
         font-variant: normal;
@@ -592,8 +593,8 @@
         color: rgb(222, 220, 220);
         border-radius: 5px;
         text-align: center;
-        transition-delay: 1s;
-        transition: 0.3s;
+        /* transition-delay: 1s;
+        transition: 0.3s; */
         box-shadow: 2px 3px 8px #b7b7b7, -2px -3px 8px #7e7e7e;
       }
 
